--- a/temp_react_frontend/src/App.css
+++ b/temp_react_frontend/src/App.css
@@ -16,7 +16,7 @@ html, body {
  
 #navbar {
   width: 100vw;
-  height : 13vh;
+  height : 12vh;
   background-color: aqua;
   padding: 10px 0;
   position :fixed;
@@ -24,8 +24,9 @@ html, body {
 
 #nav-heading {
   color: black;
-  margin-left: 20px;
-  margin-top: 5px;
+  margin-left: 3vw;
+  margin-top:0.3vh;
+  position:relative;
 }
 
 #nav-heading span {
@@ -38,7 +39,7 @@ html, body {
   height :70vh;
   margin: 11vh auto 0 auto; 
   background-color: antiquewhite;
-  padding: 20px;
+  padding: 25px;
   border-radius: 10px;
   position: relative;
 }
@@ -71,6 +72,7 @@ html, body {
   color: black;
   background-color: white;
   display: block;
+  border-radius: 10px;
   border: none;
   width: 100%;
   height: 100%;
@@ -88,7 +90,7 @@ html, body {
   justify-content: space-evenly;
   width: 80vw;
   margin: 40px auto; 
-  margin-top:44vh; 
+  margin-top:48vh; 
   position: relative;
 }
 
@@ -106,7 +108,7 @@ html, body {
 .card-heading {
     font-size: 1.8rem;
     font-weight: bold;
-    color: #333;
+    color: black;
     margin-bottom: 15px;
 }
 
@@ -114,8 +116,54 @@ html, body {
 
   background-color: white;
   border-radius: 10px;
-  padding: 20px;
+  padding: 30px;
   
   height: 32vh;
   width: 100%; /* Takes the full width of its parent */
+}
+
+.card3 button {
+    width :26vw;
+    margin-left :3vw;
+    margin-bottom: 3vh;
+    background-color: rgba(190, 170, 170, 0.186);
+    color :black;
+}
+
+
+@media (max-width :768px) {
+    #navbar {
+        height :10vh;
+    }
+
+    #nav-heading {
+        font-size :8vw;
+        margin-top: 1.7vh;
+        margin-left: 4vw;
+    }
+    #nav-heading span {
+        font-size :9.5vw;
+    }
+
+    .card {
+        width :90vw;
+        height :70vmax;
+        margin-top :9vh;
+    }
+    #container {
+        width :90vw;
+        margin-top :44vh;
+        position:fixed;
+        margin-left :5vw;
+    }
+    .card3 {
+        width :38vw;
+        height :67vmin;
+        padding :3.9vw 1.7vh;
+    }
+    .card3 button {
+        padding-left :3.7vmin;
+        padding-bottom :1vh;
+    }
+
 }
