--- a/temp_react_frontend/src/App.css
+++ b/temp_react_frontend/src/App.css
@@ -1,4 +1,4 @@
-/* * {
+* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -37,7 +37,6 @@ body {
   font-size: 3.5rem;
 }
 
-/* Temperature Card */
 .card {
   width: 80vw;
   height: 70vh;
@@ -45,8 +44,7 @@ body {
   background-color: antiquewhite;
   padding: 25px;
   border-radius: 10px;
-  background-color: antiquewhite;
-  height: auto; /* auto height mobile ke liye */
+  position: relative;
 }
 
 .card1,
@@ -71,6 +69,8 @@ body {
   display: block;
 }
 
+
+
 .label-text {
   font-size: 1.3rem;
   font-weight: bold;
@@ -91,7 +91,6 @@ body {
   outline: none;
 }
 
-/* From/To Container */
 #container {
   display: flex;
   justify-content: space-evenly;
@@ -102,6 +101,10 @@ body {
   position: relative;
   position: fixed;
 }
+
+
+
+
 
 .card-with-heading {
   display: flex;
@@ -118,6 +121,7 @@ body {
 }
 
 .card3 {
+
   background-color: white;
   border-radius: 10px;
   padding: 30px;
@@ -135,8 +139,6 @@ body {
   color: black;
 }
 
-/* 🔹 Mobile Styles ≤600px */
-@media (max-width: 600px) {
 
 @media (max-width :768px) {
   #navbar {
